<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="Ex: 12-93456-7890"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E-mail"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="10dp"/>

    <CheckBox
        android:id="@+id/emailListCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingressar na lista de e-mails?"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:layout_marginHorizontal="10dp"/>

    <RadioGroup
        android:id="@+id/sexGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp">
        <RadioButton
            android:id="@+id/mascRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/femRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feminino" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/cityEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        android:layout_marginHorizontal="10dp"/>

    <Spinner
        android:id="@+id/stateSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/estados"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/clearBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="Limpar"
            android:layout_weight="1"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/saveBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="Salvar"
            android:layout_weight="1"
            android:textAllCaps="false"
            />
    </LinearLayout>


</LinearLayout>